# rest-api

./: .env  .gitignore  Cargo.toml
services/chat_service/: Cargo.toml
services/chat_service/migrations/: 20250314155017_create_chat_tables.sql  20250323211951_functions.sql  20250323220543_indexs.sql
services/chat_service/src/: main.rs
services/chat_service/src/config/: app.rs  config.rs  db.rs
services/chat_service/src/controllers/: chat_controller.rs  message_controller.rs  mod.rs
services/chat_service/src/errors/: service_error.rs
services/chat_service/src/grpc/: client.rs
services/chat_service/src/models/: chat.rs  message.rs  mod.rs
services/chat_service/src/repositories/: chat_repository.rs  message_repository.rs  mod.rs
services/chat_service/src/services/: chat_service.rs  message_service.rs  mod.rs
services/chat_service/src/websocket/: handler.rs  mod.rs  session.rs
services/user_service/: Cargo.toml
services/user_service/migrations/: 20250311144629_create_users_table.sql  20250311204711_create_new_users_table.sql  20250314151607_create_users_table.sql  20250323202404_create_user_table_with_function.sql
services/user_service/src/: main.rs
services/user_service/src/config/: app.rs  config.rs  db.rs  mod.rs
services/user_service/src/controllers/: user_controller.rs
services/user_service/src/grpc/: server.rs
services/user_service/src/models/: response.rs  user.rs
services/user_service/src/repositories/: user_repository.rs
services/user_service/src/services/: user_service.rs
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
shared/src/middleware/: auth.rs
shared/src/models/: user_token.rs
shared/src/proto/: user_service.proto  user_service_grpc.proto
