[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web.workspace = true
futures-util.workspace = true
log.workspace = true
serde.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build = "0.11"