[package]
name = "user_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
futures-util.workspace = true
async-trait.workspace = true
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
env_logger.workspace = true
log.workspace = true
dotenvy.workspace = true
derive_more.workspace = true
shared = { path = "../../shared" }
sqlx.workspace = true
argon2 = "0.5.3"
tonic.workspace = true 
prost.workspace = true
actix-cors.workspace = true  
validator.workspace = true
prost-types.workspace = true